Added features:   * Show partial or full hostname based on the --full-hostname argument.   * Added support to show the username background in different color based on whether     the normal or root user are logged in.   * Added support for current directory to be shown as one element in the statusline,     so the cwd isn't split based on each directory.   * Support for newline to be added to the statusline, by using 'newline' in config.py.   * Added a new 'light' theme.   * Added USERNAME_ROOT_FG and USERNAME_ROOT_BG into the 'default' theme, which     specifies the color to represent the root user.

--- a/config.py.template
+++ b/config.py.template
@@ -44,5 +44,8 @@ SEGMENTS = [
     'root',
 ]
 
+# The terminal denominator used to represent the shell.
+TERMINAL_CHAR = '#'
+
 # Change the colors used to draw individual segments in your prompt
-THEME = 'default'
+THEME = 'light_user'
