Add parens to print statement

--- a/powerline-shell.py.template
+++ b/powerline-shell.py.template
@@ -6,7 +6,7 @@ import os
 import sys
 
 def warn(msg):
-    print '[powerline-bash] ', msg
+    print('[powerline-bash] ', msg)
 
 class Powerline:
     symbols = {
