--- a/config.py.dist
+++ b/config.py.dist
@@ -22,6 +22,9 @@ SEGMENTS = [
 # Show a padlock when ssh-ing from another machine
     'ssh',
 
+# Show current docker machine
+    'docker_machine',
+
 # Show the current directory. If the path is too long, the middle part is
 # replaced with ellipsis ('...')
     'cwd',
